tests/build/cases/widget_new/unknown_property1.stderr
error[E0433]: failed to resolve: use of undeclared crate or module `unknown`
 --> cases/widget_new/unknown_property1.rs:5:9
  |
5 |         unknown = 0;
  |         ^^^^^^^ use of undeclared crate or module `unknown`
